# ss-ai-server

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENT_REPORT.md  Dockerfile  PRODUCTION_READINESS_REPORT.md  README.md  fix_all_type_errors.py  fix_core_type_errors.py  fix_type_errors.py  pyproject.toml  render.yaml
src/: ss  ss_ai
src/ss_ai_server/: __init__.py  container.py  main.py
src/ss_ai_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ss_ai_server/application/: __init__.py
src/ss_ai_server/application/dto/: __init__.py
src/ss_ai_server/application/dto/requests/: __init__.py  index_request.py  search_request.py
src/ss_ai_server/application/dto/responses/: __init__.py  index_response.py  search_response.py
src/ss_ai_server/application/interfaces/: __init__.py  use_case.py
src/ss_ai_server/application/use_cases/: __init__.py  index_product.py  search_image.py
src/ss_ai_server/config/: settings.py
src/ss_ai_server/domain/: __init__.py
src/ss_ai_server/domain/entities/: __init__.py  api_key.py  embedding.py  product.py  queue_job.py  search_result.py
src/ss_ai_server/domain/interfaces/: __init__.py  ai_provider.py  cache.py  logger.py  notifier.py  queue.py  repository.py  storage.py  vector_store.py
src/ss_ai_server/domain/services/: __init__.py  embedding_service.py  indexing_service.py  search_service.py  validation_service.py
src/ss_ai_server/domain/value_objects/: __init__.py  api_key_hash.py  confidence_score.py  embedding_vector.py  model_name.py
src/ss_ai_server/exceptions/: application_exceptions.py  base_exceptions.py  domain_exceptions.py  infrastructure_exceptions.py
src/ss_ai_server/infrastructure/: __init__.py
src/ss_ai_server/infrastructure/ai/: __init__.py  base_provider.py  provider_factory.py
src/ss_ai_server/infrastructure/cache/: __init__.py  memory_cache.py
src/ss_ai_server/infrastructure/logging/: __init__.py  logger.py
src/ss_ai_server/infrastructure/monitoring/: __init__.py  health_checker.py
src/ss_ai_server/infrastructure/persistence/: __init__.py  database_manager.py
src/ss_ai_server/infrastructure/queue/: __init__.py  memory_queue.py
src/ss_ai_server/infrastructure/repositories/: __init__.py  base_repository.py  product_repository.py
src/ss_ai_server/infrastructure/storage/: __init__.py  local_storage.py
src/ss_ai_server/infrastructure/vector_stores/: __init__.py  base_vector_store.py  faiss_vector_store.py  vector_store_factory.py
src/ss_ai_server/presentation/: __init__.py
src/ss_ai_server/presentation/api/: __init__.py
src/ss_ai_server/presentation/api/Api/: Authentication.php  Client.php  ExceptionHandler.php  Response.php
src/ss_ai_server/presentation/api/Api/Endpoints/: HealthEndpoint.php  IndexEndpoint.php  SearchEndpoint.php  StatisticsEndpoint.php  VersionEndpoint.php
src/ss_ai_server/presentation/api/v1/: __init__.py.bak  admin.py  admin.py.bak  health.py.bak  index.py  index.py.bak  search.py  search.py.bak
src/ss_ai_server/presentation/middleware/: __init__.py  auth_middleware.py  rate_limit_middleware.py
