[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ss-ai-server"
version = "1.0.0"
description = "AI backend for WordPress image similarity search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SS AI Team", email = "team@ss-ai.com"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "faiss-cpu>=1.7.4",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "open-clip-torch>=2.23.0",
    "Pillow>=10.1.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
ss-ai-server = "ss_ai_server.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"